force-app/main/default/objects/NewCheck__c/NewCheck__c.object-meta.xml
<CustomObject>
    <label>新規チェック</label>
    <nameField>
        <displayFormat>NC-{000000000}</displayFormat>
        <label>新規チェック名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>