force-app/main/default/objects/NewCheck__c/fields/CheckResult__c.field-meta.xml
<CustomField>
    <fullName>CheckResult__c</fullName>
    <label>チェック結果(システム)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CheckResult</valueSetName>
    </valueSet>
</CustomField>