force-app/main/default/objects/NewCheck__c/fields/CorporateHousingRegulation__c.field-meta.xml
<CustomField>
    <fullName>CorporateHousingRegulation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>社宅規定</label>
    <referenceTo>CorporateHousingRegulation__c</referenceTo>
    <relationshipLabel>新規チェック</relationshipLabel>
    <relationshipName>CorporateHousingRegulationNewCheck1</relationshipName>
    <type>Lookup</type>
</CustomField>