force-app/main/default/objects/NewCheck__c/fields/OperatorCheck__c.field-meta.xml
<CustomField>
    <fullName>OperatorCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OPチェック</label>
    <type>Checkbox</type>
</CustomField>