force-app/main/default/objects/NewCheck__c/fields/SEQ__c.field-meta.xml
<CustomField>
    <fullName>SEQ__c</fullName>
    <label>SEQ</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>