force-app/main/default/objects/NewCheck__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OperatorCheck__c</columns>
    <columns>CheckFieldsName__c</columns>
    <columns>CheckFieldsValue__c</columns>
    <columns>NewMatter__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>